--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 *.iml
-.gradle
-/local.properties
-.idea
+.gradle/
+.idea/
 .DS_Store
-/build
-*/build
+build/
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+xcuserdata/
