--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
+kotlin.native.binary.memoryModel=experimental
