--- a/.editorconfig
+++ b/.editorconfig
@@ -26,6 +26,7 @@ ij_java_align_multiline_array_initializer_expression = false
 ij_java_align_multiline_assignment = false
 ij_java_align_multiline_binary_operation = false
 ij_java_align_multiline_chained_methods = false
+ij_java_align_multiline_deconstruction_list_components = true
 ij_java_align_multiline_extends_list = false
 ij_java_align_multiline_for = true
 ij_java_align_multiline_method_parentheses = false
@@ -39,6 +40,7 @@ ij_java_align_multiline_text_blocks = false
 ij_java_align_multiline_throws_list = false
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
+ij_java_align_types_in_multi_catch = true
 ij_java_annotation_parameter_wrap = off
 ij_java_array_initializer_new_line_after_left_brace = false
 ij_java_array_initializer_right_brace_on_new_line = false
@@ -63,6 +65,7 @@ ij_java_blank_lines_before_imports = 1
 ij_java_blank_lines_before_method_body = 0
 ij_java_blank_lines_before_package = 0
 ij_java_block_brace_style = end_of_line
+ij_java_block_comment_add_space = false
 ij_java_block_comment_at_first_column = true
 ij_java_builder_methods = none
 ij_java_call_parameters_new_line_after_left_paren = false
@@ -74,8 +77,10 @@ ij_java_class_annotation_wrap = split_into_lines
 ij_java_class_brace_style = end_of_line
 ij_java_class_count_to_use_import_on_demand = 99
 ij_java_class_names_in_javadoc = 1
+ij_java_deconstruction_list_wrap = normal
 ij_java_do_not_indent_top_level_class_members = false
 ij_java_do_not_wrap_after_single_annotation = false
+ij_java_do_not_wrap_after_single_annotation_in_parameter = false
 ij_java_do_while_brace_force = never
 ij_java_doc_add_blank_line_after_description = true
 ij_java_doc_add_blank_line_after_param_comments = false
@@ -131,6 +136,7 @@ ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
 ij_java_layout_static_imports_separately = true
 ij_java_line_comment_add_space = false
+ij_java_line_comment_add_space_on_reformat = false
 ij_java_line_comment_at_first_column = true
 ij_java_method_annotation_wrap = split_into_lines
 ij_java_method_brace_style = end_of_line
@@ -139,7 +145,10 @@ ij_java_method_parameters_new_line_after_left_paren = false
 ij_java_method_parameters_right_paren_on_new_line = false
 ij_java_method_parameters_wrap = off
 ij_java_modifier_list_wrap = false
+ij_java_multi_catch_types_wrap = normal
 ij_java_names_count_to_use_import_on_demand = 99
+ij_java_new_line_after_lparen_in_annotation = false
+ij_java_new_line_after_lparen_in_deconstruction_pattern = true
 ij_java_new_line_after_lparen_in_record_header = false
 ij_java_parameter_annotation_wrap = off
 ij_java_parentheses_expression_new_line_after_left_paren = false
@@ -155,6 +164,8 @@ ij_java_replace_sum_lambda_with_method_ref = true
 ij_java_resource_list_new_line_after_left_paren = false
 ij_java_resource_list_right_paren_on_new_line = false
 ij_java_resource_list_wrap = off
+ij_java_rparen_on_new_line_in_annotation = false
+ij_java_rparen_on_new_line_in_deconstruction_pattern = true
 ij_java_rparen_on_new_line_in_record_header = false
 ij_java_space_after_closing_angle_bracket_in_type_argument = false
 ij_java_space_after_colon = true
@@ -173,6 +184,7 @@ ij_java_space_before_class_left_brace = true
 ij_java_space_before_colon = true
 ij_java_space_before_colon_in_foreach = true
 ij_java_space_before_comma = false
+ij_java_space_before_deconstruction_list = false
 ij_java_space_before_do_left_brace = true
 ij_java_space_before_else_keyword = true
 ij_java_space_before_else_left_brace = true
@@ -203,6 +215,7 @@ ij_java_space_within_empty_array_initializer_braces = false
 ij_java_space_within_empty_method_call_parentheses = false
 ij_java_space_within_empty_method_parentheses = false
 ij_java_spaces_around_additive_operators = true
+ij_java_spaces_around_annotation_eq = true
 ij_java_spaces_around_assignment_operators = true
 ij_java_spaces_around_bitwise_operators = true
 ij_java_spaces_around_equality_operators = true
@@ -221,6 +234,7 @@ ij_java_spaces_within_braces = false
 ij_java_spaces_within_brackets = false
 ij_java_spaces_within_cast_parentheses = false
 ij_java_spaces_within_catch_parentheses = false
+ij_java_spaces_within_deconstruction_list = false
 ij_java_spaces_within_for_parentheses = false
 ij_java_spaces_within_if_parentheses = false
 ij_java_spaces_within_method_call_parentheses = false
@@ -269,6 +283,7 @@ ij_continuation_indent_size = 4
 ij_xml_align_attributes = false
 ij_xml_align_text = false
 ij_xml_attribute_wrap = normal
+ij_xml_block_comment_add_space = false
 ij_xml_block_comment_at_first_column = true
 ij_xml_keep_blank_lines = 2
 ij_xml_keep_indents_on_empty_lines = false
@@ -284,6 +299,19 @@ ij_xml_space_inside_empty_tag = true
 ij_xml_text_wrap = normal
 ij_xml_use_custom_settings = true
 
+[{*.apinotes,*.yaml,*.yml,pubspec.lock}]
+indent_size = 2
+ij_yaml_align_values_properties = do_not_align
+ij_yaml_autoinsert_sequence_marker = true
+ij_yaml_block_mapping_on_new_line = false
+ij_yaml_indent_sequence_value = true
+ij_yaml_keep_indents_on_empty_lines = false
+ij_yaml_keep_line_breaks = true
+ij_yaml_sequence_on_new_line = false
+ij_yaml_space_before_colon = false
+ij_yaml_spaces_within_braces = true
+ij_yaml_spaces_within_brackets = true
+
 [{*.bash,*.sh,*.zsh}]
 indent_size = 2
 tab_width = 2
@@ -294,7 +322,7 @@ ij_shell_redirect_followed_by_space = false
 ij_shell_switch_cases_indented = false
 ij_shell_use_unix_line_separator = true
 
-[{*.c,*.c++,*.cc,*.cp,*.cpp,*.cu,*.cuh,*.cxx,*.h,*.h++,*.hh,*.hp,*.hpp,*.hxx,*.i,*.icc,*.ii,*.inl,*.ino,*.ipp,*.m,*.mm,*.pch,*.tcc,*.tpp}]
+[{*.c,*.c++,*.cc,*.cp,*.cpp,*.cppm,*.cu,*.cuh,*.cxx,*.h,*.h++,*.hh,*.hp,*.hpp,*.hxx,*.i,*.icc,*.ii,*.inl,*.ino,*.ipp,*.ixx,*.m,*.mm,*.mxx,*.pch,*.tcc,*.tpp}]
 ij_c_add_brief_tag = false
 ij_c_add_getter_prefix = true
 ij_c_add_setter_prefix = true
@@ -443,6 +471,7 @@ ij_c_shift_operation_align_multiline = true
 ij_c_shift_operation_wrap = normal
 ij_c_show_non_virtual_functions = false
 ij_c_space_after_colon = true
+ij_c_space_after_colon_in_foreach = true
 ij_c_space_after_colon_in_selector = false
 ij_c_space_after_comma = true
 ij_c_space_after_cup_in_blocks = false
@@ -467,11 +496,13 @@ ij_c_space_before_category_parentheses = true
 ij_c_space_before_chained_send_message = true
 ij_c_space_before_class_left_brace = true
 ij_c_space_before_colon = true
+ij_c_space_before_colon_in_foreach = false
 ij_c_space_before_comma = false
 ij_c_space_before_dictionary_literal_colon = false
 ij_c_space_before_do_left_brace = true
 ij_c_space_before_else_keyword = true
 ij_c_space_before_else_left_brace = true
+ij_c_space_before_export_lbrace = true
 ij_c_space_before_for_left_brace = true
 ij_c_space_before_for_parentheses = true
 ij_c_space_before_for_semicolon = false
@@ -534,12 +565,19 @@ ij_c_spaces_within_parentheses = false
 ij_c_spaces_within_property_attributes_parentheses = false
 ij_c_spaces_within_protocols_brackets = false
 ij_c_spaces_within_send_message_brackets = false
+ij_c_spaces_within_structured_binding_list_bracket = false
 ij_c_spaces_within_switch_parentheses = false
 ij_c_spaces_within_template_call_ltgt = false
 ij_c_spaces_within_template_declaration_ltgt = false
 ij_c_spaces_within_template_double_gt = true
 ij_c_spaces_within_while_parentheses = false
 ij_c_special_else_if_treatment = true
+ij_c_structured_binding_list_align_multiline = false
+ij_c_structured_binding_list_align_multiline_bracket = false
+ij_c_structured_binding_list_comma_on_next_line = false
+ij_c_structured_binding_list_new_line_after_lbracket = false
+ij_c_structured_binding_list_new_line_before_rbracket = false
+ij_c_structured_binding_list_wrap = off
 ij_c_superclass_list_after_colon = never
 ij_c_superclass_list_align_multiline = true
 ij_c_superclass_list_before_colon = if_long
@@ -587,7 +625,7 @@ ij_cmake_spaces_within_method_call_parentheses = false
 ij_cmake_spaces_within_method_parentheses = false
 ij_cmake_spaces_within_while_parentheses = false
 
-[{*.gant,*.gradle,*.groovy,*.gy}]
+[{*.gant,*.groovy,*.gy}]
 ij_groovy_align_group_field_declarations = false
 ij_groovy_align_multiline_array_initializer_expression = false
 ij_groovy_align_multiline_assignment = false
@@ -622,6 +660,7 @@ ij_groovy_blank_lines_before_imports = 1
 ij_groovy_blank_lines_before_method_body = 0
 ij_groovy_blank_lines_before_package = 0
 ij_groovy_block_brace_style = end_of_line
+ij_groovy_block_comment_add_space = false
 ij_groovy_block_comment_at_first_column = true
 ij_groovy_call_parameters_new_line_after_left_paren = false
 ij_groovy_call_parameters_right_paren_on_new_line = false
@@ -632,6 +671,7 @@ ij_groovy_class_brace_style = end_of_line
 ij_groovy_class_count_to_use_import_on_demand = 5
 ij_groovy_do_while_brace_force = never
 ij_groovy_else_on_new_line = false
+ij_groovy_enable_groovydoc_formatting = true
 ij_groovy_enum_constants_wrap = off
 ij_groovy_extends_keyword_wrap = off
 ij_groovy_extends_list_wrap = off
@@ -641,6 +681,12 @@ ij_groovy_for_brace_force = never
 ij_groovy_for_statement_new_line_after_left_paren = false
 ij_groovy_for_statement_right_paren_on_new_line = false
 ij_groovy_for_statement_wrap = off
+ij_groovy_ginq_general_clause_wrap_policy = 2
+ij_groovy_ginq_having_wrap_policy = 1
+ij_groovy_ginq_indent_having_clause = true
+ij_groovy_ginq_indent_on_clause = true
+ij_groovy_ginq_on_wrap_policy = 1
+ij_groovy_ginq_space_after_keyword = true
 ij_groovy_if_brace_force = never
 ij_groovy_import_annotation_wrap = 2
 ij_groovy_imports_layout = *,|,javax.**,java.**,|,$*
@@ -664,6 +710,7 @@ ij_groovy_label_indent_size = 0
 ij_groovy_lambda_brace_style = end_of_line
 ij_groovy_layout_static_imports_separately = true
 ij_groovy_line_comment_add_space = false
+ij_groovy_line_comment_add_space_on_reformat = false
 ij_groovy_line_comment_at_first_column = true
 ij_groovy_method_annotation_wrap = split_into_lines
 ij_groovy_method_brace_style = end_of_line
@@ -673,6 +720,7 @@ ij_groovy_method_parameters_right_paren_on_new_line = false
 ij_groovy_method_parameters_wrap = off
 ij_groovy_modifier_list_wrap = false
 ij_groovy_names_count_to_use_import_on_demand = 3
+ij_groovy_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_groovy_parameter_annotation_wrap = off
 ij_groovy_parentheses_expression_new_line_after_left_paren = false
 ij_groovy_parentheses_expression_right_paren_on_new_line = false
@@ -711,6 +759,7 @@ ij_groovy_space_before_method_call_parentheses = false
 ij_groovy_space_before_method_left_brace = true
 ij_groovy_space_before_method_parentheses = false
 ij_groovy_space_before_quest = true
+ij_groovy_space_before_record_parentheses = false
 ij_groovy_space_before_switch_left_brace = true
 ij_groovy_space_before_switch_parentheses = true
 ij_groovy_space_before_synchronized_left_brace = true
@@ -780,6 +829,7 @@ ij_kotlin_assignment_wrap = normal
 ij_kotlin_blank_lines_after_class_header = 0
 ij_kotlin_blank_lines_around_block_when_branches = 0
 ij_kotlin_blank_lines_before_declaration_with_comment_or_annotation_on_separate_line = 1
+ij_kotlin_block_comment_add_space = false
 ij_kotlin_block_comment_at_first_column = true
 ij_kotlin_call_parameters_new_line_after_left_paren = true
 ij_kotlin_call_parameters_right_paren_on_new_line = true
@@ -810,7 +860,9 @@ ij_kotlin_keep_first_column_comment = true
 ij_kotlin_keep_indents_on_empty_lines = false
 ij_kotlin_keep_line_breaks = true
 ij_kotlin_lbrace_on_next_line = false
+ij_kotlin_line_break_after_multiline_when_entry = false
 ij_kotlin_line_comment_add_space = false
+ij_kotlin_line_comment_add_space_on_reformat = false
 ij_kotlin_line_comment_at_first_column = true
 ij_kotlin_method_annotation_wrap = split_into_lines
 ij_kotlin_method_call_chain_wrap = normal
@@ -851,12 +903,16 @@ ij_kotlin_wrap_first_method_in_call_chain = false
 
 [{*.har,*.json}]
 indent_size = 2
+ij_json_array_wrapping = split_into_lines
 ij_json_keep_blank_lines_in_code = 0
 ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
+ij_json_keep_trailing_comma = false
+ij_json_object_wrapping = split_into_lines
+ij_json_property_alignment = do_not_align
 ij_json_space_after_colon = true
 ij_json_space_after_comma = true
-ij_json_space_before_colon = true
+ij_json_space_before_colon = false
 ij_json_space_before_comma = false
 ij_json_spaces_within_braces = false
 ij_json_spaces_within_brackets = false
@@ -867,6 +923,7 @@ ij_html_add_new_line_before_tags = body,div,p,form,h1,h2,h3
 ij_html_align_attributes = true
 ij_html_align_text = false
 ij_html_attribute_wrap = normal
+ij_html_block_comment_add_space = false
 ij_html_block_comment_at_first_column = true
 ij_html_do_not_align_children_of_min_lines = 0
 ij_html_do_not_break_if_inline_tags = title,h1,h2,h3,h4,h5,h6,p
@@ -894,26 +951,18 @@ ij_markdown_force_one_space_after_blockquote_symbol = true
 ij_markdown_force_one_space_after_header_symbol = true
 ij_markdown_force_one_space_after_list_bullet = true
 ij_markdown_force_one_space_between_words = true
+ij_markdown_format_tables = true
+ij_markdown_insert_quote_arrows_on_wrap = true
 ij_markdown_keep_indents_on_empty_lines = false
+ij_markdown_keep_line_breaks_inside_text_blocks = true
 ij_markdown_max_lines_around_block_elements = 1
 ij_markdown_max_lines_around_header = 1
 ij_markdown_max_lines_between_paragraphs = 1
 ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 1
 ij_markdown_min_lines_between_paragraphs = 1
+ij_markdown_wrap_text_if_long = true
+ij_markdown_wrap_text_inside_blockquotes = true
 
 [{*.toml,Cargo.lock,Cargo.toml.orig,Gopkg.lock,Pipfile,poetry.lock}]
 ij_toml_keep_indents_on_empty_lines = false
-
-[{*.yaml,*.yml,.analysis_options}]
-indent_size = 2
-ij_yaml_align_values_properties = do_not_align
-ij_yaml_autoinsert_sequence_marker = true
-ij_yaml_block_mapping_on_new_line = false
-ij_yaml_indent_sequence_value = true
-ij_yaml_keep_indents_on_empty_lines = false
-ij_yaml_keep_line_breaks = true
-ij_yaml_sequence_on_new_line = false
-ij_yaml_space_before_colon = false
-ij_yaml_spaces_within_braces = true
-ij_yaml_spaces_within_brackets = true
