--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,17 @@
 [versions]
 checker = "0.51.0"
-agp = "8.2.2"
-kotlin = "1.9.22"
-coroutines = "1.8.0"
-mvikotlin = "3.3.0"
-decompose = "2.2.2"
-essenty = "1.3.0"
-sqldelight = "2.0.1"
+agp = "8.4.1"
+kotlin = "2.0.0"
+coroutines = "1.8.1"
+mvikotlin = "4.0.0"
+decompose = "3.0.0"
+essenty = "2.1.0"
+sqldelight = "2.0.2"
 mokoResources = "0.23.0"
-composePlugin = "1.5.12"
-composeCompiler = "1.5.9"
-compose = "1.5.12"
-activityCompose = "1.8.2"
-appcompat = "1.6.1"
-material = "1.11.0"
+composePlugin = "1.6.11"
+activityCompose = "1.9.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 compileSdk = "34"
 minSdk = "24"
 targetSdk = "34"
@@ -24,10 +22,9 @@ coroutinesDesktop = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutine
 mvikotlin = { group = "com.arkivanov.mvikotlin", name = "mvikotlin", version.ref = "mvikotlin" }
 mvikotlinLogging = { group = "com.arkivanov.mvikotlin", name = "mvikotlin-logging", version.ref = "mvikotlin" }
 mvikotlinTimetravel = { group = "com.arkivanov.mvikotlin", name = "mvikotlin-timetravel", version.ref = "mvikotlin" }
-mvikotlinRx = { group = "com.arkivanov.mvikotlin", name = "rx", version.ref = "mvikotlin" }
 mvikotlinCoroutines = { group = "com.arkivanov.mvikotlin", name = "mvikotlin-extensions-coroutines", version.ref = "mvikotlin" }
 decompose = { group = "com.arkivanov.decompose", name = "decompose", version.ref = "decompose" }
-decomposeCompose = { group = "com.arkivanov.decompose", name = "extensions-compose-jetbrains", version.ref = "decompose" }
+decomposeCompose = { group = "com.arkivanov.decompose", name = "extensions-compose", version.ref = "decompose" }
 essenty = { group = "com.arkivanov.essenty", name = "lifecycle", version.ref = "essenty" }
 sqldelightRuntime = { group = "app.cash.sqldelight", name = "runtime", version.ref = "sqldelight" }
 sqldelightPrimitive = { group = "app.cash.sqldelight", name = "primitive-adapters", version.ref = "sqldelight" }
@@ -49,4 +46,5 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 mokoResources = { id = "dev.icerock.mobile.multiplatform-resources", version.ref = "mokoResources" }
 checker = { id = "com.github.ben-manes.versions", version.ref = "checker" }
-kotlinParcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+serialization = { id = 'org.jetbrains.kotlin.plugin.serialization', version.ref = 'kotlin' }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
